--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "node",
+  "type": "module",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "node --watch src/service.js"
   },
   "keywords": [],
   "author": "",
